--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ function myFunction() {
     alert('Please Enter Valid Link');
   }
   else{
-  document.getElementById("subhan").src="https://www.youtube.com/embed/"+(document.getElementById("myText").value).substr(-11)+"?autoplay=1&mute=1" ;
+  document.getElementById("subhan").src="https://www.youtube.com/embed/"+(document.getElementById("myText").value).substr(-11)+"?vq=hd1080&autoplay=1&mute=0" ;
 }
 }
 </script>
@@ -67,7 +67,7 @@ function myFunction() {
 <div class="s"></div>
 
 <div class="videos" id="subhan1">
-<iframe id="subhan" width="100%" height="50%"
+<iframe id="subhan" width="100%" height="45%"
 src="" allowfullscreen='true' allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" frameborder="0">
 </iframe>
 
